2010-06-17 (0.4-3) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Included the rbugs2coda function to convert
  the rbugs output to a coda format.

2010-06-09 (0.4-2) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Set seed to be random if not specified by the
  user.
  * Fixed the cleanBugsWorkingDir function to delete
   the workingdir files when selected TRUE.
  * Changed the output design.
  * Changed the linbugs variables to OpenBugs.


2010-05-27 (0.4-1) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

	* Fixed the support for OpenBUGS on windows
	with the recent release of OpenBUGS310.
	* Added the example for running OpenBugs on 
	windows with the school and pump data.
 	* Fixed the example for running WinBugs on 
	windows with the school and pump data.
	* Fixed the example for running OpenBugs on 
	linux with the school data.
	* The WINE examples were not tested and the
	WINE support will not be carried on in a soon
	future.


2010-05-01 (0.4-0) Jun Yan  <jyan@.stat.uconn.edu>

	* tuned support for OpenBUGS on linux
	with the recent release of OpenBUGS307
	(thanks to Christopher L DuBois <duboisc@ics.uci.edu>).
	* deprecated support for WinBUGS and useWine.

	
2008-11-19 (0.3-6) Jun Yan  <jyan@.stat.uconn.edu>

	* changed tools::file_test to tools:::file_test in utils.R,
	thanks to Andrew Walsh <awalsh@cs.cmu.edu>.


2006-10-09 (0.3-5) Jun Yan  <jyan@.stat.uiowa.edu>

	* changed check '(is.null(bugs))' to '(length(bugs) == 0)' in rbugs,
	as pointed out by Simon Bonner <sbonner@stat.sfu.ca>.

2006-03-28 (0.3-4) Jun Yan  <jyan@stat.uiowa.edu>

	* added random number seed as an option to rbugs and 
	genBugsScript.

2006-03-24 (0.3-3)  Jun Yan  <jyan@.stat.uiowa.edu>

	* added support for linbugs (OpenBUGS on Linux). 
	Support for WinBUGS via Wine is no longer necessary.
	* added an option `genFilesOnly' for function `rbugs' 