@@ -1,3 +1,9 @@
+2010-07-07 (0.4-4) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>
+
+  * Fix the debug and dic functionality for
+  OpenBUGS 
+  * Corrected the wine script generation
+
 2010-06-17 (0.4-3) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>
 
   * Included the rbugs2coda function to convert
